--- a/easyexcel-demo/src/main/resources/application-dev.properties
+++ b/easyexcel-demo/src/main/resources/application-dev.properties
@@ -13,6 +13,6 @@ server.context-path=/easyexcel
 
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/fund?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&transformedBitIsBoolean=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/fund?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=CONVERT_TO_NULL&transformedBitIsBoolean=true&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=111111
